--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches: 
       - master
+      - test
     paths-ignore:
       - '*.md'
       - '**/.gitignore'
@@ -12,3 +13,5 @@ on:
 jobs:
   build:
     uses: ./.github/workflows/build.yml
+    with:
+      branch: ${{ github.ref_name }}
