--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,6 +61,16 @@ jobs:
         with:
           name: STRAHChsLocalizationHelper
           path: STRAHChsLocalizationHelper/bin/Release/net8.0-windows/win-x64/publish/
+      - name: Cache fonts
+        id: cache-fonts
+        uses: actions/cache@v4
+        with:
+          path: files/fonts/*.ttf
+          key: fonts-${{ hashFiles('scripts/download_fonts.ps1') }}
+      - name: Download fonts
+        if: steps.cache-fonts.outputs.cache-hit != 'true'
+        run: |
+          scripts/download_fonts.ps1
       - name: Create Patch
         run: |
           STRAHChsLocalizationHelper/bin/Release/net8.0-windows/win-x64/publish/STRAHChsLocalizationHelper
